# spalloc

./: .coveragerc  .gitignore  .ratexcludes  .readthedocs.yaml  .travis.yml  CITATION.cff  LICENSE_POLICY.md  MANIFEST.in  README.rst  mypy.bash  mypyd.bash  pypi_to_import  pytest.ini  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python_actions.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
spalloc/: __init__.py  _keepalive_process.py  _utils.py  _version.py  config.py  job.py  protocol_client.py  states.py  term.py
spalloc/scripts/: alloc.py  job.py  machine.py  ps.py  support.py  where_is.py
spalloc_client/: _keepalive_process.py  _utils.py  _version.py  config.py  job.py  protocol_client.py  spalloc_config.py  term.py
spalloc_client/scripts/: alloc.py  job.py  machine.py  ps.py  support.py  where_is.py
tests/: common.py  conftest.py  test_config.py  test_doc_checker.py  test_job.py  test_protocol_client.py  test_term.py
tests/scripts/: test_alloc.py  test_job_script.py  test_machine.py  test_ps.py  test_where_is.py
